; ModuleID = '/home/carl/AnghaBench/mpv/video/out/gpu/extr_error_diffusion.c_mp_ef_compute_shared_memory_size.c'
source_filename = "/home/carl/AnghaBench/mpv/video/out/gpu/extr_error_diffusion.c_mp_ef_compute_shared_memory_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.error_diffusion_kernel = type { i32 }

@EF_MAX_DELTA_Y = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @mp_ef_compute_shared_memory_size(%struct.error_diffusion_kernel* %0, i32 %1) #0 {
  %3 = alloca %struct.error_diffusion_kernel*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store %struct.error_diffusion_kernel* %0, %struct.error_diffusion_kernel** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i32, i32* %4, align 4
  %8 = load i32, i32* @EF_MAX_DELTA_Y, align 4
  %9 = add nsw i32 %7, %8
  store i32 %9, i32* %5, align 4
  %10 = load %struct.error_diffusion_kernel*, %struct.error_diffusion_kernel** %3, align 8
  %11 = call i32 @compute_rightmost_shifted_column(%struct.error_diffusion_kernel* %10)
  %12 = add nsw i32 %11, 1
  store i32 %12, i32* %6, align 4
  %13 = load i32, i32* %5, align 4
  %14 = load i32, i32* %6, align 4
  %15 = mul nsw i32 %13, %14
  %16 = mul nsw i32 %15, 4
  ret i32 %16
}

declare dso_local i32 @compute_rightmost_shifted_column(%struct.error_diffusion_kernel*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
